--- a/app/src/main/res/layout/activity_emergency_contacts.xml
+++ b/app/src/main/res/layout/activity_emergency_contacts.xml
@@ -8,16 +8,18 @@
     tools:context=".EmergencyContacts">
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="26dp"
-        android:layout_height="27dp"
-        android:background="@drawable/back1"
+        android:id="@+id/button35"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/goback"
+        android:clickable="true"
+        android:onClick="goback"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.025" />
+        app:layout_constraintVertical_bias="0.006" />
 
     <TextView
         android:id="@+id/toolbar"
