--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -51,7 +51,7 @@
         android:id="@+id/weight"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:background="@drawable/weights"
+        android:background="@drawable/weight123"
         android:clickable="true"
         android:onClick="weight"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,5 +101,19 @@
             android:layout_centerInParent="true"
             android:textColor="@android:color/white"/>
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CPR"
+        android:clickable="true"
+        android:onClick="cpr"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.358" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
