--- a/app/src/main/res/layout/activity_weight.xml
+++ b/app/src/main/res/layout/activity_weight.xml
@@ -7,17 +7,18 @@
     android:layout_margin="0dp">
 
     <Button
-        android:layout_width="18dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="20dp"
-        android:onClick="close"
-        android:background="@drawable/back1"
-        app:layout_constraintBottom_toBottomOf="@id/textView2"
+        android:id="@+id/button23"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/goback"
+        android:clickable="true"
+        android:onClick="goback"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/textView2"
-        app:layout_constraintTop_toTopOf="@id/textView2"
-        android:layout_marginLeft="20dp" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView2"
